--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
-@import url(reset.css);
-@import url(main.css);
-@import url(menu.css);
+@import "./reset.css";
+@import "./main.css";
+@import "./menu.css";
 /*나눔고딕*/
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
